articles are showing up no dublicates

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/ramirezceleste/mongo-ny-app#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mongojs": "^2.5.0",
     "mongoose": "^5.0.17",
     "request": "^2.85.0"
   }
